# 6DOF_PoseEstimation

./: README.md
code/: kinect2_grabber.h  main.cpp  util.h
model/: 生成点云模板.md
model/code/: CMakeLists.txt  GeneratePointCloudFromPositionData  GeneratePointCloudFromPositionData.cpp  add_rgb_to_model.py  batch_convert_pointcloud.sh  generate_pointcloud_from_position_data.cpp
model/pcd/: model_1.pcd  model_10.pcd  model_2.pcd  model_3.pcd  model_4.pcd  model_5.pcd  model_6.pcd  model_7.pcd  model_8.pcd  model_9.pcd
tutorials/: Ubuntu16.04 下安装PCL1.8.md
